# minifs

./: CMakeLists.txt  README.md  fs.c
driver/: Makefile  minifs_driver.c
include/: bit_util.h  block.h  disk_io.h  globals.h  inode.h  interface.h  lock.h  net_io.h  str_util.h
src/: bit_util.c  block.c  client.c  disk_io.c  inode.c  interface.c  lock.c  main.c  net_io.c  str_util.c
